Fixed the meta description tag in the generated project

--- a/example/templates/app/index.html
+++ b/example/templates/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <title><%= config.get('projectName') %></title>
         
-        <meta name="description" content=<%= config.get('description') %> />
+        <meta name="description" content="<%= config.get('description') %>" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <link rel="icon" type="image/png" href="assets/favicon.png"/>
